# server/app.js
@@ -11,9 +11,11 @@ const categoryRoutes = require("./routes/categoryRoutes");
 const productRoutes = require("./routes/productRoutes");
 const orderRoutes = require("./routes/orderRoutes");
 const dashboardRoutes = require("./routes/dashboardRoutes");
+const reportRoutes = require("./routes/reportRoutes");
 const careerRoutes = require("./routes/careerRoutes");
 
 const { errorHandler } = require("./middleware/errorMiddleware");
+
 
 const app = express();
 
@@ -35,6 +37,8 @@ app.use("/api/products", productRoutes);
 app.use("/api/orders", orderRoutes);
 app.use("/api/careers", careerRoutes);
 app.use("/api/dashboard", dashboardRoutes);
+app.use("/api/applications", careerRoutes);
+app.use("/api/reports", reportRoutes);
 app.use("/uploads",express.static(path.join(__dirname, "uploads")));
 
 
